--- a/RNews/Views/Account/Register.cshtml
+++ b/RNews/Views/Account/Register.cshtml
@@ -3,11 +3,12 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>Registration</h1>
 
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row justify-content-center">
+    <div class="col-md-4 ">
+        <h1 class="justify-content-center">Registration</h1>
+
+        <hr />
         <form asp-action="Register">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -35,9 +36,6 @@
             </div>
         </form>
     </div>
-</div>
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
