register login and logout for users

--- a/RNews/Views/Auth/Register.cshtml
+++ b/RNews/Views/Auth/Register.cshtml
@@ -9,11 +9,9 @@
         <h1 class="text-center">Registration</h1>
 
         <hr />
-        <form asp-action="Register">
+        <form method="post" asp-action="Register" asp-controller="Auth">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-
-            </div>
+            
             <div class="form-group">
                 <input asp-for="Email" class="form-control" placeholder="Email address" />
                 <span asp-validation-for="Email" class="text-danger"></span>
