--- a/RNews/Views/Auth/Register.cshtml
+++ b/RNews/Views/Auth/Register.cshtml
@@ -1,4 +1,5 @@
 ﻿@model RNews.Models.ViewModels.RegisterViewModel
+
 @{
     ViewData["Title"] = "Register";
 }
@@ -11,7 +12,7 @@
         <hr />
         <form method="post" asp-action="Register" asp-controller="Auth">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
+
             <div class="form-group">
                 <input asp-for="Email" class="form-control" placeholder="Email address" />
                 <span asp-validation-for="Email" class="text-danger"></span>
@@ -37,6 +38,8 @@
                 <input type="submit" value="Register" class="btn btn-primary btn-lg btn-block" />
             </div>
         </form>
+        <hr />
+        @*<partial name="_SignIn" />*@
     </div>
 </div>
 
