--- a/RNews/Views/Shared/_Layout.cshtml
+++ b/RNews/Views/Shared/_Layout.cshtml
@@ -72,6 +72,21 @@
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             @RenderBody()
+
+
+
+            @if (User.Identity.IsAuthenticated)
+            {
+                @foreach (var claim in User.Claims)
+                {
+                    <div>@claim.Issuer | @claim.Type | @claim.Value</div>
+                }
+            }
+            else
+            {
+                <p>User is not signed in</p>
+            }
+
         </main>
     </div>
 
