--- a/RNews/Views/Auth/Register.cshtml
+++ b/RNews/Views/Auth/Register.cshtml
@@ -2,13 +2,13 @@
 @model RNews.Models.ViewModels.RegisterViewModel
 @{
     ViewData["Title"] = "Register";
+    ViewBag.GeneratePassword = "asdfasdfa";
 }
 
 
 <div class="row justify-content-center">
     <div class="col-md-4 ">
         <h1 class="text-center">Registration</h1>
-
         <hr />
         <form method="post" asp-action="Register" asp-controller="Auth">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -18,7 +18,7 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input asp-for="Password" class="form-control" placeholder="Password" />
+                <input asp-for="Password" class="form-control" placeholder="Password " />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -39,7 +39,7 @@
             </div>
         </form>
         <hr />
-        
+
 
         @foreach (var scheme in await schemeProvider.GetRequestHandlerSchemesAsync())
         {
@@ -55,5 +55,7 @@
 </div>
 
 @section Scripts {
+    <script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
+    <script src="~/js/GeneratePassword.js"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
