--- a/RNews/Views/Auth/Register.cshtml
+++ b/RNews/Views/Auth/Register.cshtml
@@ -8,22 +8,26 @@
 
 <div class="row justify-content-center">
     <div class="col-md-4 ">
-        <h1 class="text-center">Registration</h1>
+        <h1 class="text-center display-4">Registration</h1>
         <hr />
         <form method="post" asp-action="Register" asp-controller="Auth">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
                 <input asp-for="Email" class="form-control" placeholder="Email address" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+
             </div>
             <div class="form-group">
-                <input asp-for="Password" class="form-control" placeholder="Password " />
-                <span asp-validation-for="Password" class="text-danger"></span>
+                <input asp-for="Password" class="form-control "  placeholder="Password" />
             </div>
+
             <div class="form-group">
                 <input asp-for="PasswordConfirm" class="form-control" placeholder="Confirm password" />
-                <span asp-validation-for="PasswordConfirm" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <button id="generate-password" class="btn btn-sm btn-link btn-block">Generate password</button>
+                <span id="auto-password" class="small"></span>
             </div>
 
             <div class="input-group mb-3">
@@ -40,7 +44,6 @@
         </form>
         <hr />
 
-
         @foreach (var scheme in await schemeProvider.GetRequestHandlerSchemesAsync())
         {
             <form asp-action="signin" asp-controller="authexternal" method="post">
@@ -50,7 +53,11 @@
                 <button class="btn btn-lg btn-link btn-block" type="submit">Connect using @scheme.DisplayName</button>
             </form>
         }
-
+        <div class="form-group">
+            <span asp-validation-for="Email" class="text-danger"></span><br />
+            <span asp-validation-for="Password" class="text-danger"></span><br />
+            <span asp-validation-for="PasswordConfirm" class="text-danger"></span>
+        </div>
     </div>
 </div>
 
