change style of profile page

--- a/RNews/Views/Profile/Profile.cshtml
+++ b/RNews/Views/Profile/Profile.cshtml
@@ -3,8 +3,8 @@
     ViewData["Title"] = "Profile";
 }
 
-<h1>Profile</h1>
-
+<h2 class="font-weight-light">Profile - @User.Identity.Name</h2>
+<hr />
 
 @if (User.Identity.IsAuthenticated)
 {
