--- a/RNews/Views/Shared/_Layout.cshtml
+++ b/RNews/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Profile" asp-action="Index"> @User.Identity.Name</a>
+                                <a class="nav-link text-dark" asp-controller="Profile" asp-action="Profile"> @User.Identity.Name</a>
                             </li>
                             <li class="nav-item">
                                 <form class="form-inline" asp-controller="Auth" asp-action="LogOut" asp-route-returnUrl="@Url.Action("Index", "Home")">
@@ -51,10 +51,6 @@
                             </li>
                         }
                     </ul>
-
-
-
-
 
 
 
