--- a/RNews/Views/Publication/Publication.cshtml
+++ b/RNews/Views/Publication/Publication.cshtml
@@ -12,16 +12,7 @@
     <div class="col-md-8">
         <h3>New Publication</h3>
         <br />
-        <form>
-            <div class="form-group row">
-                <label for="staticTitle" class="col-sm-2 col-form-label font-weight-bold text-right">Title:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control-plaintext" id="staticTitle" value="" placeholder="Your Title">
-                </div>
-            </div>
-        </form>
-        <textarea id="post-text"></textarea>
-        <button type="submit" class="btn btn-primary btn-block">Publish</button>
+        <partial name="Create"/>
     </div>
     <div class="col-md-4">
        
