add unit static class

--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -22,7 +22,14 @@
                 </div>
             </div>
         </form>
-        
+        <div class="form-group row">
+            <ul>
+                @foreach (var item in @Model.Posts)
+                {
+                    <li>@item</li>
+                }
+            </ul>
+        </div>
         
     </div>
 </div>
