--- a/RNews/Views/Publication/Show.cshtml
+++ b/RNews/Views/Publication/Show.cshtml
@@ -9,7 +9,7 @@
         <h2 class="text-center font-weight-light">@Model.Title</h2>
         <hr />
         <div>
-            @Model.Content
+            @Html.Raw(Model.Content)
         </div>
         <partial name="_Comments" />
     </div>
