--- a/RNews/Views/Publication/Create.cshtml
+++ b/RNews/Views/Publication/Create.cshtml
@@ -19,6 +19,12 @@
             <input asp-for="Description" type="text" class="form-control-plaintext" id="staticDescription" value="" placeholder="Your Description">
         </div>
     </div>
+    <div class="form-group row">
+        <label for="staticCategory" class="col-sm-2 col-form-label font-weight-bold text-right">Category:</label>
+        <div class="col-sm-10">
+            <select asp-for="Category" asp-items="@Html.GetEnumSelectList<RNews.DAL.Category>()" class="selectpicker form-control"></select>
+        </div>
+    </div>
     <div class="form-group">
         <button type="submit" class="btn btn-primary btn-block">Publish</button>
     </div>
