before set up jeditable

--- a/RNews/Views/Home/Index.cshtml
+++ b/RNews/Views/Home/Index.cshtml
@@ -1,13 +1,12 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<h1>@ViewBag.Test</h1>
 <div class="row">
     @foreach (var item in ViewBag.LastAdded)
     {
-
         <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
+            <div id="post-@item.PostId" class="card mb-4 box-shadow">
                 <div class="card-body">
                     <h5 class="card-title">@item.Title</h5>
                     <p class="card-text">@item.Description</p>
@@ -37,3 +36,8 @@
         </div>
     }
 </div>
+<ul id="messages-list"></ul>
+@section Scripts {
+    <script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
+    <script src="~/js/RNewsCrud.js"></script>
+}
