--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -3,16 +3,18 @@
 @{
     ViewData["Title"] = "Properties";
 }
-    
+
 <div class="row justify-content-center">
     <div class="col-md-8">
-        <h4 class="text-center font-weight-light">@Model.Name</h4>
+        <h4 class="text-center font-weight-light" id="user-name" >@Model.Name</h4>
         <hr />
         <form>
+            @Html.HiddenFor(m => m.PropertyViewModelId)
             <div class="form-group row">
-                <label for="staticName" class="col-sm-2 col-form-label font-weight-bold">Name</label>
+                <label for="user-property-name" class="col-sm-2 col-form-label font-weight-bold">Name</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control-plaintext" id="staticName" value="@Model.Name">
+                    <input type="text" class="form-control-plaintext" id="user-property-name" value="@Model.Name">
+                    <button id="user-property-btn">ok</button>
                 </div>
             </div>
             <div class="form-group row">
@@ -22,24 +24,10 @@
                 </div>
             </div>
         </form>
-        
-        
     </div>
 </div>
 
-<p class="editable-text">example</p>
-
-@section Scripts { 
-    <script src="~/lib/jeditable/jquery.jeditable.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $(".editable-text").editable('/properties/edit', {
-                submit: 'ok',
-                cancel: 'cancel',
-                cssclass: 'editable',
-                width: '99%'
-            });
-            console.log("iasdfasdfasf");
-        });
-    </script>
+@section Scripts {
+    <script src="~/lib/signalr/dist/browser/signalr.js"></script>
+    <script src="~/js/UserProperty.js"></script>
 }
