--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -13,13 +13,13 @@
             <div class="form-group row">
                 <label for="user-property-name" class="col-sm-2 col-form-label font-weight-bold">Name</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control-plaintext" id="user-property-name" value="@Model.Name">
+                    <input type="text" class="form-control-plaintext" id="user-property-name"  value="@Model.Name">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="staticEmail" class="col-sm-2 col-form-label font-weight-bold">E-Mail</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control-plaintext" id="staticEmail" value="@Model.Email">
+                    <input type="text" class="form-control-plaintext last" id="staticEmail"  value="@Model.Email">
                 </div>
             </div>
         </form>
