--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -13,14 +13,17 @@
             <div class="form-group row">
                 <label for="user-property-name" class="col-sm-2 col-form-label font-weight-bold">Name</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control-plaintext" id="user-property-name"  value="@Model.Name">
+                    <input type="text" class="form-control-plaintext" id="user-property-name" value="@Model.Name">
                 </div>
             </div>
             <div class="form-group row">
-                <label for="staticEmail" class="col-sm-2 col-form-label font-weight-bold">E-Mail</label>
+                <label for="user-property-email" class="col-sm-2 col-form-label font-weight-bold">E-Mail</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control-plaintext last" id="staticEmail"  value="@Model.Email">
+                    <input type="text" class="form-control-plaintext last" id="user-property-email" value="@Model.Email">
                 </div>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary btn-block" id="user-property-btn">submit</button>
             </div>
         </form>
     </div>
