--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -13,7 +13,7 @@
             <div class="form-group row">
                 <label for="user-property-name" class="col-sm-2 col-form-label font-weight-bold">Name</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control-plaintext" id="user-property-name" value="@Model.Name" tabindex="0" data-toggle="popover" data-trigger="focus" title="Dismissible popover" data-content="Press Enter to Confirm">
+                    <input type="text" class="form-control-plaintext" id="user-property-name" value="@Model.Name" tabindex="0" data-toggle="popover" data-trigger="focus"data-placement="top" data-content="Press Enter to Confirm">
                 </div>
             </div>
             <div class="form-group row">
