--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -13,7 +13,7 @@
             <div class="form-group row">
                 <label for="user-property-name" class="col-sm-2 col-form-label font-weight-bold">Name</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control-plaintext" id="user-property-name" value="@Model.Name" tabindex="0" data-toggle="popover" data-trigger="focus"data-placement="top" data-content="Press Enter to Confirm">
+                    <input type="text" class="form-control-plaintext" id="user-property-name" value="@Model.Name">
                 </div>
             </div>
             <div class="form-group row">
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-block" id="user-property-btn">submit</button>
+                <button type="submit" class="btn btn-primary btn-block" id="user-property-btn">Ok</button>
             </div>
         </form>
     </div>
@@ -32,9 +32,4 @@
 @section Scripts {
     <script src="~/lib/signalr/dist/browser/signalr.js"></script>
     <script src="~/js/UserProperty.js"></script>
-    <script>
-        $(function () {
-            $('[data-toggle="popover"]').popover()
-        });
-    </script>
 }
