--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -5,27 +5,33 @@
 }
 
 <div class="row justify-content-center">
-    <div class="col-md-8">
-        <h4 class="text-center font-weight-light" id="user-name" >@Model.Name</h4>
-        <hr />
-        <form>
-            @Html.HiddenFor(m => m.PropertyViewModelId)
-            <div class="form-group row">
-                <label for="user-property-name" class="col-sm-2 col-form-label font-weight-bold">Name</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control-plaintext" id="user-property-name" value="@Model.Name">
+    <div class="col-md-8 row">
+        <div class="col-md-4 box-shadow">
+
+        </div>
+        <div class="col-md-8">
+            <h4 class="text-center font-weight-light" id="user-name">@Model.Name</h4>
+            <hr />
+            <form>
+                @Html.HiddenFor(m => m.PropertyViewModelId)
+                <div class="form-group row">
+                    <label for="user-property-name" class="col-sm-2 col-form-label font-weight-bold">Name</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control-plaintext" id="user-property-name" value="@Model.Name">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group row">
-                <label for="user-property-email" class="col-sm-2 col-form-label font-weight-bold">E-Mail</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control-plaintext last" id="user-property-email" value="@Model.Email">
+                <div class="form-group row">
+                    <label for="user-property-email" class="col-sm-2 col-form-label font-weight-bold">E-Mail</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control-plaintext last" id="user-property-email" value="@Model.Email">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-block" id="user-property-btn">Ok</button>
-            </div>
-        </form>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary btn-block" id="user-property-btn">Ok</button>
+                </div>
+            </form>
+        </div>
+        
     </div>
 </div>
 
