--- a/RNews/Views/Home/Index.cshtml
+++ b/RNews/Views/Home/Index.cshtml
@@ -15,8 +15,9 @@
                            @Html.ActionLink("View", "show", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
                            @Html.ActionLink("Edit", "edit", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
                            @Html.ActionLink("Delete", "delete", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
+
                         </div>
-                        <small class="text-muted">@item.Category | @item.Created.ToString("d")</small>
+                        <small class="text-muted">@item.Created.ToString("d")</small>
                     </div>
                 </div>
             </div>
@@ -26,14 +27,14 @@
 <div class="row">
     @foreach (var item in ViewBag.TopRatingPost)
     {
-        <div class="col-md-4">
+        <div id="post-@item.PostId" class="col-md-4">
             <div class="card mb-4 box-shadow">
                 <div class="card-body">
                     <h5 class="card-title">@item.Title</h5>
                     <p class="card-text">@item.Description</p>
                     <div class="d-flex justify-content-between align-items-center">
                         @Html.ActionLink("Читать", "show", "publication", new { id = item.PostId }, new { @class = "btn btn-link" })
-                        <small class="text-muted">@item.Category | @item.Created.ToString("d")</small>
+                        <small class="text-muted">@item.Created.ToString("d")</small>
                     </div>
                 </div>
             </div>
