add default user avatar image

--- a/RNews/Views/Home/Index.cshtml
+++ b/RNews/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<h1>@ViewBag.Test</h1>
+    
 <div class="row">
     @foreach (var item in ViewBag.LastAdded)
     {
@@ -24,6 +24,7 @@
         </div>
     }
 </div>
+
 <div class="row">
     @foreach (var item in ViewBag.TopRatingPost)
     {
@@ -33,7 +34,11 @@
                     <h5 class="card-title">@item.Title</h5>
                     <p class="card-text">@item.Description</p>
                     <div class="d-flex justify-content-between align-items-center">
-                        @Html.ActionLink("Читать", "show", "publication", new { id = item.PostId }, new { @class = "btn btn-link" })
+                        <div class="btn-group">
+                            @Html.ActionLink("View", "show", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
+                            @Html.ActionLink("Edit", "edit", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
+                            @Html.ActionLink("Delete", "delete", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
+                        </div>
                         <small class="text-muted">@item.Created.ToString("d")</small>
                     </div>
                 </div>
