--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -7,7 +7,7 @@
 <div class="row justify-content-center">
     <div class="col-md-8 row">
         <div class="col-md-4 box-shadow">
-
+            <img src="@Model.ImagePath" alt="User Avatar" class="img-fluid" />
         </div>
         <div class="col-md-8">
             <h4 class="text-center font-weight-light" id="user-name">@Model.Name</h4>
