change input for post image

--- a/RNews/Views/Publication/PostMainImage.cshtml
+++ b/RNews/Views/Publication/PostMainImage.cshtml
@@ -1,6 +1,6 @@
 ﻿<form asp-action="UploadPostMainImage" asp-controller="Publication" method="post" enctype="multipart/form-data">
     <div class="form-group">
-        <input type="file" name="uploadedFile" class="form-control-file form-control-sm my-4" id="exampleFormControlFile1">
+        <input type="file" name="UploadPostMainImage" class="form-control-file form-control-sm my-4" id="post-main-image-upload">
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-secondary btn-block btn-sm" id="post-main-image-upload-btn">Upload</button>
