--- a/RNews/Views/Publication/Create.cshtml
+++ b/RNews/Views/Publication/Create.cshtml
@@ -3,7 +3,7 @@
 
 <hr />
 
-<form asp-action="Create" >
+<form method="post" asp-action="Create" asp-controller="Publication" enctype="multipart/form-data">
     <div class="form-group row">
         <label for="staticTitle" class="col-sm-2 col-form-label font-weight-bold text-right">Title:</label>
         <div class="col-sm-10">
@@ -11,6 +11,13 @@
         </div>
     </div>
     
+    <div class="form-group row">
+        <label for="staticTitle" class="col-sm-2 col-form-label font-weight-bold text-right">Image:</label>
+        <div class="col-sm-10">
+            <input asp-for="Image" type="file"   >
+        </div>
+    </div>
+
     <div class="form-group">
         <textarea asp-for="Content" id="post-text" ></textarea>
     </div>
