show post image done

--- a/RNews/Views/Publication/Show.cshtml
+++ b/RNews/Views/Publication/Show.cshtml
@@ -8,6 +8,7 @@
     <div class="col-md-8">
         <h2 class="text-center font-weight-light">@Model.Title</h2>
         <hr />
+        <img src="@Model.ImagePath" alt="Alternate Text" class="img-fluid" />
         <div>
             @Html.Raw(Model.Content)
         </div>
