--- a/RNews/Views/Home/Index.cshtml
+++ b/RNews/Views/Home/Index.cshtml
@@ -7,14 +7,15 @@
     {
         <div class="col-md-4">
             <div id="post-@item.PostId" class="card mb-4 box-shadow">
+                <img class="card-img-top" src="@item.ImagePath" alt="Card image">
                 <div class="card-body">
                     <h5 class="card-title">@item.Title</h5>
                     <p class="card-text">@item.Description</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                           @Html.ActionLink("View", "show", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
-                           @Html.ActionLink("Edit", "edit", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
-                           @Html.ActionLink("Delete", "delete", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
+                            @Html.ActionLink("View", "show", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
+                            @Html.ActionLink("Edit", "edit", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
+                            @Html.ActionLink("Delete", "delete", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
 
                         </div>
                         <small class="text-muted">@item.Created.ToString("d")</small>
@@ -30,6 +31,7 @@
     {
         <div id="post-@item.PostId" class="col-md-4">
             <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="@item.ImagePath" alt="Card image">
                 <div class="card-body">
                     <h5 class="card-title">@item.Title</h5>
                     <p class="card-text">@item.Description</p>
