--- a/RNews/Views/Home/Index.cshtml
+++ b/RNews/Views/Home/Index.cshtml
@@ -31,7 +31,13 @@
     {
         <div id="post-@item.PostId" class="col-md-4">
             <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="@item.ImagePath" alt="Card image">
+                <div class="card-body">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <small>@item.Category</small>
+                        <small>@item.User.UserName <img src="@item.User.ImagePath" class="img-fluid" alt="Alternate Text" /></small>
+                    </div>
+                </div>
+                <img class="card-img rounded-0" src="@item.ImagePath" alt="Card image">
                 <div class="card-body">
                     <h5 class="card-title">@item.Title</h5>
                     <p class="card-text">@item.Description</p>
