--- a/RNews/Views/Home/Index.cshtml
+++ b/RNews/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-center">
                         <small>@item.Category</small>
-                        <small>@item.User.UserName <img src="@item.User.ImagePath" class="img-fluid" alt="Alternate Text" /></small>
+                        <small>@item.User.UserName <img src="@item.User.ImagePath" class="img-fluid post-user-pic rounded-circle" alt="Alternate Text" /></small>
                     </div>
                 </div>
                 <img class="card-img rounded-0" src="@item.ImagePath" alt="Card image">
