--- a/RNews/Views/Shared/_Layout.cshtml
+++ b/RNews/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                                 <button class="dropdown-toggle nav-link nav-link btn btn-link text-dark" data-toggle="dropdown"> Account</button>
                                 <ul class="dropdown-menu">
                                     <li><a class="nav-link text-dark" asp-controller="Properties" asp-action="Properties">Properties</a></li>
-                                    <li><a class="nav-link text-dark" asp-controller="Publication" asp-action="Publication">Publications</a></li>
+                                    <li><a class="nav-link text-dark" asp-controller="Publication" asp-action="Publication">Add Post</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
