--- a/RNews/wwwroot/css/site.css
+++ b/RNews/wwwroot/css/site.css
@@ -55,5 +55,6 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 .post-user-pic{
-    max-height: 40px;
+    height: 40px;
+    width: 40px;
 }
