50/50 drag and drop image uload work

--- a/RNews/Views/Publication/Create.cshtml
+++ b/RNews/Views/Publication/Create.cshtml
@@ -50,16 +50,14 @@
     </div>
 
 </div>
-<textarea id="code" rows="10" cols="50"></textarea>
+@*<textarea id="code" rows="10" cols="50"></textarea>*@
 
 @section Scripts{
     <script src="~/simplemde/simplemde.min.js"></script>
-    <script src="~/js/simplemde.js"></script>
+
     <script src="~/lib/inline-attachment.js"></script>
-    <script src="~/lib/input.inline-attachment.js"></script>
-    <script type="text/javascript">
-        inlineAttachment.editors.input.attachToInput(document.getElementById("code"));
-    </script>
+    <script src="~/lib/codemirror-4.inline-attachment.js"></script>
+    <script src="~/js/simplemde.js"></script>
 }
 
 
