--- a/RNews/Views/Home/Index.cshtml
+++ b/RNews/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     @foreach (var item in ViewBag.LastAdded)
     {
         <div class="col-md-4">
-            <div id="post-@item.PostId" class="card mb-4 box-shadow">
+            <div id="post-@item.PostId" class="card mb-4 box-shadow border-success border-right-0 border-bottom-0 border-left-0">
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-center">
                         <small>@item.Category</small>
@@ -36,7 +36,7 @@
     @foreach (var item in ViewBag.TopRatingPost)
     {
         <div id="post-@item.PostId" class="col-md-4">
-            <div class="card mb-4 box-shadow">
+            <div class="card mb-4 box-shadow border-warning border-right-0 border-bottom-0 border-left-0">
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-center">
                         <small>@item.Category</small>
