--- a/RNews/Views/Publication/Show.cshtml
+++ b/RNews/Views/Publication/Show.cshtml
@@ -2,8 +2,7 @@
 @{
     ViewData["Title"] = "Show";
 }
-
-
+    <link href="~/lib/bootstrap-star-rating/css/star-rating.min.css" rel="stylesheet" />
 <div class="row justify-content-center">
     <div class="col-md-8 box-shadow">
         <h2 class="text-center font-weight-light">@Model.Title</h2>
@@ -12,11 +11,13 @@
         <div>
             @Html.Raw(Model.Content)
         </div>
+        <label for="input-1-ltr-star-xs" class="control-label">Rate This</label>
+        <input id="input-1-ltr-star-xs" name="input-1-ltr-star-xs" class="kv-ltr-theme-default-star rating-loading" value="1" dir="ltr" data-size="xs">
         <div class="media row">
             <div class="col-sm-2">
                 <img src="@Model.AuthorAvatar" class="mr-3 img-fluid" alt="Author Avatar">
             </div>
-            
+
             <div class="media-body col-sm-10">
                 <h5 class="mt-0">@Model.AuthorName</h5>
                 на "RNews" с  @Model.DateOfCreatedAuthor.ToString("Y")
@@ -24,5 +25,9 @@
         </div>
         <partial name="_Comments" />
     </div>
-    
 </div>
+
+@section Scripts{
+    <script src="~/lib/bootstrap-star-rating/js/star-rating.min.js"></script>
+    <script src="~/js/ratepost.js"></script>
+}
