--- a/RNews/Views/Auth/Login.cshtml
+++ b/RNews/Views/Auth/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@model RNews.Models.ViewModels.LoginViewModel
+﻿@inject Microsoft.AspNetCore.Authentication.IAuthenticationSchemeProvider schemeProvider
+@model RNews.Models.ViewModels.LoginViewModel
 @{
     ViewData["Title"] = "Login";
 }
@@ -27,7 +28,15 @@
             </div>
         </form>
         <hr />
-  
+        @foreach (var scheme in await schemeProvider.GetRequestHandlerSchemesAsync())
+        {
+            <form asp-action="signin" asp-controller="authexternal" method="post">
+                <input type="hidden" name="Provider" value="@scheme.Name" />
+                <input type="hidden" name="ReturnUrl" value="@ViewBag.ReturnUrl" />
+
+                <button class="btn btn-lg btn-link btn-block" type="submit">Login using @scheme.DisplayName</button>
+            </form>
+        }
     </div>
 </div>
 
