--- a/RNews/Views/Publication/Show.cshtml
+++ b/RNews/Views/Publication/Show.cshtml
@@ -7,7 +7,7 @@
     <div class="col-md-8 box-shadow">
         <h2 class="text-center font-weight-light">@Model.Title</h2>
         <hr />
-        <img src="@Model.ImagePath" alt="Alternate Text" class="img-fluid" />
+        <img src="@Model.ImagePath" alt="Alternate Text" class="img-fluid mx-auto d-block" />
         <div>
             @Html.Raw(Model.Content)
         </div>
