--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -28,6 +28,12 @@
                         <input type="text" class="form-control-plaintext last" id="user-property-email" value="@Model.Email">
                     </div>
                 </div>
+                <div class="form-group row">
+                    <label for="user-property-description" class="col-sm-2 col-form-label font-weight-bold">Description:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control-plaintext last" id="user-property-description" value="@Model.Description">
+                    </div>
+                </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary btn-block" id="user-property-btn">Ok</button>
                 </div>
