add initializer with admin user

--- a/RNews/Views/Admin/Show.cshtml
+++ b/RNews/Views/Admin/Show.cshtml
@@ -10,7 +10,7 @@
         <div class="row form-group">
             <label for="account-info-id" class="col-sm-4 col-form-label font-weight-bold text-right">Id:</label>
             <div class="col-sm-8">
-                <input type="text" class="form-control-plaintext" id="account-info-id" value="@Model.Id">
+                <p class="form-control-plaintext" id="account-info-id">@Model.Id </p>
             </div>
         </div>
         <div class="row form-group">
