--- a/RNews/Views/Admin/Show.cshtml
+++ b/RNews/Views/Admin/Show.cshtml
@@ -22,7 +22,10 @@
         <div class="row form-group">
             <label for="account-info-role" class="col-sm-4 col-form-label font-weight-bold text-right">Role:</label>
             <div class="col-sm-8">
-                <input type="text" class="form-control-plaintext" id="account-info-role" value="@Model.Role">
+                @foreach (var role in Model.Roles)
+                {
+                  <span class="form-control-plaintext">@role</span> 
+                }
             </div>
         </div>
         <div class="row form-group">
