add support russian to identity

--- a/RNews/Views/Admin/Index.cshtml
+++ b/RNews/Views/Admin/Index.cshtml
@@ -34,7 +34,7 @@
                         <td>
                             @Html.ActionLink("Show", "Show", "Admin", new { id = user.UserId }, new { @class = "btn btn-sm btn-primary" })
                             @Html.ActionLink("block", "block", "Admin", new { id = user.UserId }, new { @class = "btn btn-sm btn-dark" })
-                            @Html.ActionLink("Delete", "delete", "Admin", new { id = user.UserId }, new { @class = "btn btn-sm btn-danger" })
+                            @Html.ActionLink("Ban", "Ban", "Admin", new { id = user.UserId }, new { @class = "btn btn-sm btn-danger" })
 
                         </td>
                     </tr>
