--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Properties";
 }
    
-<div class="row justify-content-center">
-    <div class="col-md-8 row">
+<div class="row justify-content-center ">
+    <div class="col-md-8 row ">
         <div class="col-md-4 box-shadow">
             <img src="@Model.ImagePath" alt="User Avatar" class="img-fluid" id="user-avatar" />
             
@@ -14,7 +14,7 @@
         <div class="col-md-8">
             <h4 class="text-center font-weight-light">@foreach (var role in Model.Roles)
             {
-                @role
+                <strong> @role</strong> 
             }
             </h4>
             <hr />
@@ -33,8 +33,8 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="user-property-description" class="col-sm-2 col-form-label font-weight-bold">Description:</label>
-                    <div class="col-sm-10">
+                    <label for="user-property-description" class="col-sm-12 col-form-label font-weight-bold">Description:</label>
+                    <div class="col-sm-12">
                         <input type="text" class="form-control-plaintext last" id="user-property-description" value="@Model.Description">
                     </div>
                 </div>
