--- a/RNews/Views/Admin/Show.cshtml
+++ b/RNews/Views/Admin/Show.cshtml
@@ -16,7 +16,7 @@
         <div class="row form-group">
             <label for="account-info-name" class="col-sm-4 col-form-label font-weight-bold text-right">Name:</label>
             <div class="col-sm-8">
-                <input type="text" class="form-control-plaintext" id="account-info-name" value="@Model.Name">
+                <p class="form-control-plaintext" id="account-info-name">@Model.Name </p>
             </div>
         </div>
         <div class="row form-group">
@@ -31,19 +31,19 @@
         <div class="row form-group">
             <label for="account-info-email" class="col-sm-4 col-form-label font-weight-bold text-right">Email:</label>
             <div class="col-sm-8">
-                <input type="text" class="form-control-plaintext" id="account-info-email" value="@Model.Email">
+                <p class="form-control-plaintext" id="account-info-email">@Model.Email </p>
             </div>
         </div>
         <div class="row form-group">
             <label for="account-info-description" class="col-sm-4 col-form-label font-weight-bold text-right">Description:</label>
             <div class="col-sm-8">
-                <input type="text" class="form-control-plaintext" id="account-info-description" value="@Model.Description">
+                <p class="form-control-plaintext" id="account-info-description">@Model.Description</p>
             </div>
         </div>
         <div class="row form-group">
             <label for="account-info-registerdate" class="col-sm-4 col-form-label font-weight-bold text-right">Register Date:</label>
             <div class="col-sm-8">
-                <input type="text" class="form-control-plaintext" id="account-info-registerdate" value="@Model.RegisterDate">
+                <p class="form-control-plaintext" id="account-info-registerdate">@Model.RegisterDate</p>
             </div>
         </div>
         <div class="row form-group">
