--- a/RNews/Views/Admin/Edit.cshtml
+++ b/RNews/Views/Admin/Edit.cshtml
@@ -9,11 +9,20 @@
             <hr />
             <form asp-action="Edit" asp-controller="Admin" method="post">
                 @Html.HiddenFor(m => m.Id)
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Name)
-                    @Html.EditorFor(m => m.Name)
+                <div class="form-group row">
+                    <label for="staticTitle" class="col-sm-2 col-form-label font-weight-bold text-right">Name:</label>
+                    <div class="col-sm-10">
+                        <input asp-for="Name" type="text" class="form-control" id="staticTitle" value="@Model.Name">
+                    </div>
                 </div>
-                <button type="submit">save</button>
+                <div class="form-group row">
+                    <label for="staticTitle" class="col-sm-2 col-form-label font-weight-bold text-right">Role:</label>
+                    <div class="col-sm-10">
+                        @Html.DropDownListFor(m=>m.Roles, )
+                        <select asp-for="Roles" asp-items="ViewBag.Roles" class="selectpicker form-control"></select>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-sm btn-block btn-primary">save</button>
             </form>
         </div>    
         
