--- a/RNews/Views/Admin/Edit.cshtml
+++ b/RNews/Views/Admin/Edit.cshtml
@@ -18,8 +18,7 @@
                 <div class="form-group row">
                     <label for="staticTitle" class="col-sm-2 col-form-label font-weight-bold text-right">Role:</label>
                     <div class="col-sm-10">
-                        @Html.DropDownListFor(m=>m.Roles, )
-                        <select asp-for="Roles" asp-items="ViewBag.Roles" class="selectpicker form-control"></select>
+                        <select asp-for="Roles" class="selectpicker form-control"></select>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-sm btn-block btn-primary">save</button>
