--- a/RNews/Views/Admin/Index.cshtml
+++ b/RNews/Views/Admin/Index.cshtml
@@ -9,6 +9,7 @@
 
 <div>
     <h4>Total Users: @Model.Count</h4>
+    <input id="what-search" type="text" placeholder="Search..." class="form-control border-0" />
     <div class="table-responsive">
         <table class="table table-striped table-sm">
             <thead>
@@ -19,17 +20,18 @@
                     <th>Actions</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="where-search">
                 @foreach (var user in Model)
                 {
                     <tr>
                         @Html.Hidden("UserId", user.UserId)
                         <td>@user.UserName</td>
                         <td>@user.UserEmail</td>
-                        <td>@foreach (var role in user.UserRoles)
-                                {
-                                    <span>@role</span>
-                                }
+                        <td>
+                            @foreach (var role in user.UserRoles)
+                            {
+                                <span>@role</span>
+                            }
                         </td>
                         <td>
                             @Html.ActionLink("Set Reader", "SetReader", "Admin", new { id = user.UserId }, new { @class = "btn btn-sm btn-success" })
@@ -45,3 +47,7 @@
 
 </div>
 
+
+@section Scripts{
+    <script src="~/js/Admin.js"></script>
+}
