fix admin post view

--- a/RNews/Views/Admin/Posts.cshtml
+++ b/RNews/Views/Admin/Posts.cshtml
@@ -5,9 +5,10 @@
 }
 
 <h1>Posts</h1>
-
+<hr />
 <div>
-    <h4>Total Users: @Model.Count</h4>
+    <h4>Total Posts: @Model.Count</h4>
+
     <input id="what-search" type="text" placeholder="Search..." class="form-control border-0" />
     <div class="table-responsive">
         <table class="table table-striped table-sm">
