search by titile post done

--- a/RNews/Views/Search/_Search.cshtml
+++ b/RNews/Views/Search/_Search.cshtml
@@ -1,4 +1,4 @@
-﻿<form class="form-inline">
-    <input class="form-control form-control border-0" type="text" placeholder="Search" aria-label="Search">
+﻿<form asp-controller="Search" asp-action="Index" class="form-inline">
+    <input class="form-control form-control rounded-0 border-top-0 border-left-0 border-right-0" type="text" placeholder="Search" aria-label="Search">
     <i class="fas fa-search" aria-hidden="true"></i>
 </form>
