--- a/RNews/Views/Search/Index.cshtml
+++ b/RNews/Views/Search/Index.cshtml
@@ -3,19 +3,26 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>We Founded</h1>
+<h1>Search Result</h1>
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-12 box-shadow">
+            <div class="row mt-3">
+                <div class="col-md-4"><strong>Title</strong></div>
+                <div class="col-md-4"><strong>Description</strong></div>
+                <div class="col-md-2"><strong>Date</strong></div>
+                <div class="col-md-2"><strong>Author</strong></div>
+            </div>
+            <hr />
             @foreach (var post in Model)
             {
             <div class="row">
-                <div class="col-md-1">@post.Id</div>
-                <div class="col-md-3">@post.Title</div>
+                <div class="col-md-4"><a href="@Url.Action("Show","Publication",new { id = post.Id})"><strong>@post.Title</strong></a></div>
                 <div class="col-md-4">@post.Description</div>
                 <div class="col-md-2">@post.DateOfCreated</div>
                 <div class="col-md-2">@post.Author</div>
             </div>
+            <hr />
             }
         </div>
     </div>
